// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicDetailsContainer to match on form submit 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/plans"
                    >
                      Manage Plan
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          />
          <div
            class="ml-auto"
          >
            <div>
              <a
                href="/plans"
              >
                <button
                  class="btn btn-secondary"
                  flow="add,save"
                  link="/plans"
                  type="button"
                >
                  Cancel
                </button>
              </a>
                 
              <button
                class="btn btn-primary"
                flow="add"
                type="submit"
              >
                Save
              </button>
                 
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Category: MEP
              </p>
            </div>
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Type: 401(k)
              </p>
            </div>
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Level: Master
              </p>
            </div>
            <div
              class="col-md-3"
            >
              <p
                class="fs-12"
              >
                Sponsoring Org: SO-001
              </p>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Plan-Year Start
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      Jan
                    </option>
                    <option
                      value="2"
                    >
                      Feb
                    </option>
                    <option
                      value="3"
                    >
                      Mar
                    </option>
                    <option
                      value="4"
                    >
                      Apr
                    </option>
                    <option
                      value="5"
                    >
                      May
                    </option>
                    <option
                      value="6"
                    >
                      Jun
                    </option>
                    <option
                      value="7"
                    >
                      Jul
                    </option>
                    <option
                      value="8"
                    >
                      Aug
                    </option>
                    <option
                      value="9"
                    >
                      Sep
                    </option>
                    <option
                      value="10"
                    >
                      Oct
                    </option>
                    <option
                      value="11"
                    >
                      Nov
                    </option>
                    <option
                      value="12"
                    >
                      Dec
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Month
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                   
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Date
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Plan-Year End
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      Jan
                    </option>
                    <option
                      value="2"
                    >
                      Feb
                    </option>
                    <option
                      value="3"
                    >
                      Mar
                    </option>
                    <option
                      value="4"
                    >
                      Apr
                    </option>
                    <option
                      value="5"
                    >
                      May
                    </option>
                    <option
                      value="6"
                    >
                      Jun
                    </option>
                    <option
                      value="7"
                    >
                      Jul
                    </option>
                    <option
                      value="8"
                    >
                      Aug
                    </option>
                    <option
                      value="9"
                    >
                      Sep
                    </option>
                    <option
                      value="10"
                    >
                      Oct
                    </option>
                    <option
                      value="11"
                    >
                      Nov
                    </option>
                    <option
                      value="12"
                    >
                      Dec
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Month
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                   
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Date
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Plan Effective Date
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Plan Termination Date (optional)
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Is the first year a short-year?
                   
                </label>
                <div
                  class="form-control form-button-group "
                >
                  <div
                    class="btn-group"
                    name="shortYear"
                    role="group"
                  >
                    <button
                      class="btn btn-primary"
                      data-attr="Yes"
                      type="button"
                    >
                      Yes
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="No"
                      type="button"
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Short-year Start
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Short-year End
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  IRS Plan number
                   
                </label>
                <input
                  autocomplete="off"
                  class="w-100 form-control"
                  name="IRSPlanNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Contract Number
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="contractNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <p>
            Plan Administrator
          </p>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Name
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="Name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Phone Number
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="phoneNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  E Mail
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="email"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`BasicDetailsContainer to match snapshot active 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/plans"
                    >
                      Manage Plan
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          />
          <div
            class="ml-auto"
          >
            <div>
              <a
                href="/plans"
              >
                <button
                  class="btn btn-secondary"
                  flow="add,save"
                  link="/plans"
                  type="button"
                >
                  Cancel
                </button>
              </a>
                 
              <button
                class="btn btn-primary"
                flow="add"
                type="submit"
              >
                Save
              </button>
                 
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Category: MEP
              </p>
            </div>
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Type: 401(k)
              </p>
            </div>
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Level: Master
              </p>
            </div>
            <div
              class="col-md-3"
            >
              <p
                class="fs-12"
              >
                Sponsoring Org: SO-001
              </p>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Plan-Year Start
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      Jan
                    </option>
                    <option
                      value="2"
                    >
                      Feb
                    </option>
                    <option
                      value="3"
                    >
                      Mar
                    </option>
                    <option
                      value="4"
                    >
                      Apr
                    </option>
                    <option
                      value="5"
                    >
                      May
                    </option>
                    <option
                      value="6"
                    >
                      Jun
                    </option>
                    <option
                      value="7"
                    >
                      Jul
                    </option>
                    <option
                      value="8"
                    >
                      Aug
                    </option>
                    <option
                      value="9"
                    >
                      Sep
                    </option>
                    <option
                      value="10"
                    >
                      Oct
                    </option>
                    <option
                      value="11"
                    >
                      Nov
                    </option>
                    <option
                      value="12"
                    >
                      Dec
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Month
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                   
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Date
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Plan-Year End
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      Jan
                    </option>
                    <option
                      value="2"
                    >
                      Feb
                    </option>
                    <option
                      value="3"
                    >
                      Mar
                    </option>
                    <option
                      value="4"
                    >
                      Apr
                    </option>
                    <option
                      value="5"
                    >
                      May
                    </option>
                    <option
                      value="6"
                    >
                      Jun
                    </option>
                    <option
                      value="7"
                    >
                      Jul
                    </option>
                    <option
                      value="8"
                    >
                      Aug
                    </option>
                    <option
                      value="9"
                    >
                      Sep
                    </option>
                    <option
                      value="10"
                    >
                      Oct
                    </option>
                    <option
                      value="11"
                    >
                      Nov
                    </option>
                    <option
                      value="12"
                    >
                      Dec
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Month
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                   
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Date
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Plan Effective Date
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Plan Termination Date (optional)
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Is the first year a short-year?
                   
                </label>
                <div
                  class="form-control form-button-group "
                >
                  <div
                    class="btn-group"
                    name="shortYear"
                    role="group"
                  >
                    <button
                      class="btn btn-primary"
                      data-attr="Yes"
                      type="button"
                    >
                      Yes
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="No"
                      type="button"
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Short-year Start
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Short-year End
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  IRS Plan number
                   
                </label>
                <input
                  autocomplete="off"
                  class="w-100 form-control"
                  name="IRSPlanNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Contract Number
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="contractNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <p>
            Plan Administrator
          </p>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Name
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="Name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Phone Number
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="phoneNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  E Mail
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  name="email"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`BasicDetailsContainer to match snapshot in edit flow 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/plans"
                    >
                      Manage Plan
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          />
          <div
            class="ml-auto"
          >
            <div>
              <a
                href="/plans"
              >
                <button
                  class="inner-layout-actions btn btn-link"
                  flow="edit"
                  link="/plans"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-times fa-w-10 "
                    color="#212529"
                    data-icon="times"
                    data-prefix="fal"
                    focusable="false"
                    role="img"
                    style="font-size: 1.5rem;"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </a>
                 
              <button
                class="inner-layout-actions btn btn-link"
                flow="edit"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil-alt fa-w-16 "
                  color="#212529"
                  data-icon="pencil-alt"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M493.255 56.236l-37.49-37.49c-24.993-24.993-65.515-24.994-90.51 0L12.838 371.162.151 485.346c-1.698 15.286 11.22 28.203 26.504 26.504l114.184-12.687 352.417-352.417c24.992-24.994 24.992-65.517-.001-90.51zM164.686 347.313c6.249 6.249 16.379 6.248 22.627 0L368 166.627l30.059 30.059L174 420.745V386h-48v-48H91.255l224.059-224.059L345.373 144 164.686 324.687c-6.249 6.248-6.249 16.378 0 22.626zm-38.539 121.285l-58.995 6.555-30.305-30.305 6.555-58.995L63.255 366H98v48h48v34.745l-19.853 19.853zm344.48-344.48l-49.941 49.941-82.745-82.745 49.941-49.941c12.505-12.505 32.748-12.507 45.255 0l37.49 37.49c12.506 12.506 12.507 32.747 0 45.255z"
                    fill="currentColor"
                  />
                </svg>
              </button>
                 
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Category: MEP
              </p>
            </div>
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Type: 401(k)
              </p>
            </div>
            <div
              class="col-md-2"
            >
              <p
                class="fs-12"
              >
                Level: Master
              </p>
            </div>
            <div
              class="col-md-3"
            >
              <p
                class="fs-12"
              >
                Sponsoring Org: SO-001
              </p>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Plan-Year Start
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      Jan
                    </option>
                    <option
                      value="2"
                    >
                      Feb
                    </option>
                    <option
                      value="3"
                    >
                      Mar
                    </option>
                    <option
                      value="4"
                    >
                      Apr
                    </option>
                    <option
                      value="5"
                    >
                      May
                    </option>
                    <option
                      value="6"
                    >
                      Jun
                    </option>
                    <option
                      value="7"
                    >
                      Jul
                    </option>
                    <option
                      value="8"
                    >
                      Aug
                    </option>
                    <option
                      value="9"
                    >
                      Sep
                    </option>
                    <option
                      value="10"
                    >
                      Oct
                    </option>
                    <option
                      value="11"
                    >
                      Nov
                    </option>
                    <option
                      value="12"
                    >
                      Dec
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Month
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                   
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Date
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Plan-Year End
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      Jan
                    </option>
                    <option
                      value="2"
                    >
                      Feb
                    </option>
                    <option
                      value="3"
                    >
                      Mar
                    </option>
                    <option
                      value="4"
                    >
                      Apr
                    </option>
                    <option
                      value="5"
                    >
                      May
                    </option>
                    <option
                      value="6"
                    >
                      Jun
                    </option>
                    <option
                      value="7"
                    >
                      Jul
                    </option>
                    <option
                      value="8"
                    >
                      Aug
                    </option>
                    <option
                      value="9"
                    >
                      Sep
                    </option>
                    <option
                      value="10"
                    >
                      Oct
                    </option>
                    <option
                      value="11"
                    >
                      Nov
                    </option>
                    <option
                      value="12"
                    >
                      Dec
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Month
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                   
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Date
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Plan Effective Date
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Plan Termination Date (optional)
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Is the first year a short-year?
                   
                </label>
                <div
                  class="form-control form-button-group disabled"
                >
                  <div
                    class="btn-group"
                    name="shortYear"
                    role="group"
                  >
                    <button
                      class="btn btn-primary"
                      data-attr="Yes"
                      disabled=""
                      type="button"
                    >
                      Yes
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="No"
                      disabled=""
                      type="button"
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Short-year Start
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-4"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Short-year End
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <div
            class="row"
          >
            <div
              class="col-md-2"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  IRS Plan number
                   
                </label>
                <input
                  autocomplete="off"
                  class="w-100 form-control"
                  disabled=""
                  name="IRSPlanNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Contract Number
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  disabled=""
                  name="contractNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <p>
            Plan Administrator
          </p>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Name
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  disabled=""
                  name="Name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Phone Number
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  disabled=""
                  name="phoneNumber"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  E Mail
                   
                </label>
                <input
                  autocomplete="off"
                  class="form-control"
                  disabled=""
                  name="email"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
